# suturo_nlp

./: .gitignore  README.md  audio_compare.py  build_deps_ws.sh  hsr_mic_acc_test.py  noetic_install.sh  receptionist.py  suturo-setup.sh
activate_language_processing/: CMakeLists.txt  package.xml  setup.py
activate_language_processing/activate_language_processing/: __init__.py  nlp.py
activate_language_processing/launch/: nlp_start.launch  nlp_start_egpsr.launch  nlp_start_receptionist.launch  rasa_test.launch
activate_language_processing/scripts/: README  README.md  TestMicrophone.ipynb  __init__.py  activate_language_processing.py  compare.py  enhanced_tests.py  install_packages.sh  nlp_challenges.py  nlp_doorbell.py  nlp_gpsr.py  nlp_mcrs.py  nlp_mcrs_test.py  nlp_receptionist.py  nlp_restaurant.py  references.yml  results.ipynb  results.json  tests.py  transcription_tests.py  wrong_sentences.txt
activate_language_processing/scripts/audio/: NameAndDrink2.m4a  Order.m4a
activate_language_processing/src/activate_language_processing/: beep.py  nlp.py
audio_compare/: hsr_audio_compare.py
generator/: attributes_item.txt  command_and_test_generator.py  drinks.txt  foods.txt  generated_testing.txt  generated_training.txt  naturalPersons.txt  physicalArtifacts.txt  physicalPlaces.txt  templates.txt  tests.json
pos_recognizer/: sentence_builder.py  spaCy_processing.py
sound_detection/: CMakeLists.txt  package.xml
sound_detection/launch/: nlp_sound_detect.launch
sound_detection/scripts/: nlp_sound_detect.py
suturo_julius/: CMakeLists.txt
suturo_julius/dictionaries/: dic_list_move_objs.txt
suturo_julius/dictionaries/move_objs/: move_obj.grammar  move_obj.voca
suturo_nlg/: CMakeLists.txt  package.xml
suturo_nlg/launch/: suturo_nlg.launch
suturo_nlg/scripts/: nlg.py3  nlg_hotfix.py  nlg_ros.py
suturo_rasa_request/: rasa_request.py
suturo_textparser/: CMakeLists.txt  package.xml
suturo_textparser/launch/: suturo_nlp_goandget.launch
suturo_textparser/scripts/: gogetit.py
test_noisy_input/: test_noisy_input.py
