<?xml version="1.0"?>
<package format="2">
  <name>activate_language_processing</name>
  <version>0.0.0</version>
  <description>The activate_language_processing package</description>
  <license>unpublished</license>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anbe@uni-bremen.de">Andreas Benischke</maintainer>
  <maintainer email="ch_lu@uni-bremen.de">Christian Lukanowski</maintainer>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>requests</depend>
  <depend>whisper</depend>
  <depend>speech_recognition</depend>
  <depend>json</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
