<?xml version="1.0"?>
<package format="2">
  <name>sound_detection</name>
  <version>0.0.0</version>
  <description>The sound_detection package</description>
  <license>unpublished</license>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anbe@uni-bremen.de">Andreas Benischke</maintainer>
  <maintainer email="ch_lu@uni-bremen.de">Christian Lukanowski</maintainer>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>
  <depend>rospkg</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
