<?xml version="1.0"?>
<package format="3">
  <name>sound_detection</name>
  <version>0.0.0</version>
  <description>The sound_detection package</description>
  <license>unpublished</license>
  <maintainer email="anbe@uni-bremen.de">Andreas Benischke</maintainer>
  <maintainer email="ch_lu@uni-bremen.de">Christian Lukanowski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>rospkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
