<package format="2">
  <name>suturo_nlg</name>
  <version>0.0.1</version>
  <description>
    This package provides nlg messages.
  </description>
  <maintainer email="schnippa@uni-bremen.de">Paul Schnipper</maintainer>
  <license>BSD</license>

  <author>Paul Schnipper</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>nlg_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
