<?xml version="1.0"?>
<package format="3">
  <name>suturo_nlg</name>
  <version>0.0.1</version>
  <description>This package provides nlg functionality.</description>
  <maintainer email="schnippa@uni-bremen.de">Paul Schnipper</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-zmq</exec_depend>
  <exec_depend>aliencontrol</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
