<?xml version="1.0"?>
<package format="3">
  <name>suturo_textparser</name>
  <version>0.0.0</version>
  <description>Parse text for the SUTURO project.</description>
  <license>unpublished</license>
  <maintainer email="schnippa@uni-bremen.de">Paul Schnipper</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
